--- a/src/app/ficha-ind/ficha-ind.component.html
+++ b/src/app/ficha-ind/ficha-ind.component.html
@@ -18,7 +18,7 @@
   <script src="../assets/vendor/chart.js/Chart.min.js"></script>
 </head>
 <body>
-
+  <app-nav></app-nav>
   <div class="container">
     <section class="section section-container" style="padding-bottom: 10px;">
       <div class="box">
