--- a/src/app/orden-trabajo/orden-trabajo.component.html
+++ b/src/app/orden-trabajo/orden-trabajo.component.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  <app-nav></app-nav>
    <div id="content-wrapper" class="d-flex flex-column" style="padding-left: 10%; padding-right:10%">
     <div id="content">
       <div class="container-fluid">
