--- a/src/app/add-new-activity/add-new-activity.component.html
+++ b/src/app/add-new-activity/add-new-activity.component.html
@@ -18,6 +18,7 @@
   <script src="../assets/vendor/chart.js/Chart.min.js"></script>
 </head>
 <body>
+	<app-nav></app-nav>
 	<div class="row">
 		<div class="col-7">
 			<section class="section section-container" style="padding-bottom: 10px;">
