--- a/src/app/asignar/asignar.component.html
+++ b/src/app/asignar/asignar.component.html
@@ -18,6 +18,7 @@
   <script src="../assets/vendor/chart.js/Chart.min.js"></script>
 </head>
 <body>
+  <app-nav></app-nav>
 <!--<h1>Users</h1>
 
 <ul *ngIf="users">
