--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,7 @@
 </head>
 <!--background="./assets/img/PieOrganizacional.png"-->
 <body style="background-color: #C4C4C4;">
+  <app-nav></app-nav>
     <div id="content-wrapper" class="d-flex flex-column" style="padding:10%; padding-top:5%">
       <div id="content">
         <div class="container-fluid">
