Agrega display clientes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,10 +16,9 @@
   <script src="./assets/js/sb-admin-2.min.js"></script>
   <script src="./assets/vendor/chart.js/Chart.min.js"></script>
 </head>
-<!--background="./assets/img/PieOrganizacional.png"-->
 <body style="background-color: #C4C4C4;">
   <app-nav></app-nav>
-    <div id="content-wrapper" class="d-flex flex-column" style="padding:10%; padding-top:5%">
+    <div id="content-wrapper" class="d-flex flex-column" style="padding:10%; padding-top:5%; background-image: url('./assets/img/background4.jpg'); background-position: center; background-size: cover;">
       <div id="content">
         <div class="container-fluid">
           <div class="row" style="margin-top:10px;">
@@ -141,6 +140,6 @@
     </div>
 
     <div class="footer">
-      <img style="width:100% !important;" src="../assets/PieOrganizacional.png" alt=""/>
+      <img style="width:100% !important;" src="../assets/img/footer1.png" alt=""/>
     </div>
 </body>
