--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -18,32 +18,32 @@
   <script src="https://kit.fontawesome.com/c07986c2b5.js"></script>
 </head>
 
-<mat-toolbar>
-  <mat-toolbar-row>  
-    <div class="d-inline-block align-center" >
-      <a class="navbar-brand" href="/">
-        <img style="padding:10px;" src="../assets/img/rozto-logo.png"  width="100" class="d-inline-block align-center" alt="">
+<mat-toolbar style="background-color: #ccd1d1;">
+  <mat-toolbar-row style="background-color: #ccd1d1;" >   
+    <div class="d-inline-block align-center">
+      <a class="navbar-brand" routerLink="/test">
+        <img style="padding:10px; margin-left: 15px; margin-right: 15px;" src="./assets/img/rozto-logo.png"  width="100px" class="d-inline-block align-center" alt="">
       </a>
-      <a class="btn btn-outline-danger"   type="button" href="/">
-        <img style="padding:10px; padding-left: 5px;" src="./assets/img/home.svg" width="45" class="d-inline-block align-center" alt="">Inicio
+      <a class="btn btn-outline-danger"   type="button" routerLink="/home">
+        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/home.svg" width="45" class="d-inline-block align-center" alt="">Inicio
       </a>
-      <a class="btn btn-outline-danger"  type="button" href="/orden-trabajo">
-        <img style="padding:10px; padding-left: 5px;" src="./assets/img/organize.svg" width="45" class="d-inline-block align-center" alt="">Generar OT
+      <a class="btn btn-outline-danger"  type="button" routerLink="/orden-trabajo">
+        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/organize.svg" width="45" class="d-inline-block align-center" alt="">Generar OT
       </a>
-      <a class="btn btn-outline-danger"  type="button" href="/asignar">
-        <img style="padding:10px; padding-left: 5px;" src="./assets/img/worker.svg" width="45" class="d-inline-block align-center" alt="">Asignar OT
+      <a class="btn btn-outline-danger"  type="button" routerLink="/asignar">
+        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/worker.svg" width="45" class="d-inline-block align-center" alt="">Asignar OT
       </a>
-      <a class="btn btn-outline-danger"  type="button" href="/ficha">
-        <img style="padding:10px; padding-left: 5px;"  src="./assets/img/helmet.svg" width="45" class="d-inline-block align-center" alt="">Detalles OT
+      <a class="btn btn-outline-danger"  type="button" routerLink="/ficha">
+        <img style="padding:10px; padding-left: 5px;"  src="./assets/icons/svg/helmet.svg" width="45" class="d-inline-block align-center" alt="">Detalles OT
       </a>
-      <a class="btn btn-outline-danger"  type="button" href="/nueva-moto">
-        <img style="padding:10px; padding-left: 5px;" src="./assets/img/motorcycle.svg" width="45" class="d-inline-block align-center" alt="">Nuevo modelo
+      <a class="btn btn-outline-danger"  type="button" routerLink="/nueva-moto">
+        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/motorcycle.svg" width="45" class="d-inline-block align-center" alt="">Nuevo modelo
       </a>
-      <a class="btn btn-outline-danger"  type="button" href="/nueva-actividad">
-        <img style="padding:10px; padding-left: 5px;"  src="./assets/img/workflow.svg" width="45" class="d-inline-block align-center" alt="">Nueva actividad
+      <a class="btn btn-outline-danger"  type="button" routerLink="/nueva-actividad">
+        <img style="padding:10px; padding-left: 5px;"  src="./assets/icons/svg/workflow.svg" width="45" class="d-inline-block align-center" alt="">Nueva actividad
       </a>
-      <a class="btn btn-outline-danger"  type="button" href="/nuevo-producto">
-        <img style="padding:10px; padding-left: 5px;" src="./assets/img/settings.svg" width="45" class="d-inline-block align-center" alt="">Nuevo producto
+      <a class="btn btn-outline-danger"  type="button" routerLink="/nuevo-producto">
+        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/settings.svg" width="45" class="d-inline-block align-center" alt="">Nuevo producto
       </a>      
     </div>
   </mat-toolbar-row>
