--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -8,3 +8,7 @@
 		color:#4C4C4E;
 	}
 	
+.mat-toolbar-row, .mat-toolbar-single-row {
+    height: 90px;
+    border: 0.9px solid #b2babb !important;
+}
