--- a/src/app/orden-trabajo/orden-trabajo.component.html
+++ b/src/app/orden-trabajo/orden-trabajo.component.html
@@ -20,24 +20,26 @@
 
 <body>
   <app-nav></app-nav>
-   <div id="content-wrapper" class="d-flex flex-column" style="padding-left: 10%; padding-right:10%">
+   <div id="content-wrapper" class="d-flex flex-column" style="background-image: url('./assets/img/background4.jpg'); background-position: center; background-size: cover;">
     <div id="content">
-      <div class="container-fluid">
+      <div class="container-fluid" style="width: 1000px; "> 
         <section class="section section-container" style="padding-bottom: 10px;">
-          <div class="box" style="align-content: center; color: #FF0022;">
-            <h1>Nueva Orden de Trabajo</h1>
-            <form [formGroup]="messageForm" (ngSubmit)="onSubmit()">
+          <div class="box" style="align-content: center; color: #FF0022;">              
+            <h1>Nueva Orden de Trabajo 
+                <button (click)="AddClient()" small>Nuevo Cliente</button>
+            </h1>
+            <form [formGroup]="OTform" (ngSubmit)="onSubmit(OTform.value)">
                 <h5 *ngIf="success">Your form is valid!</h5>
                 <h3 class='subtitle'>{{ title }}</h3>
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" color="primary" src="../assets/img/resume.svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" color="primary" src="../assets/icons/svg/resume.svg"  width="72" class="d-inline-block align-center" alt="">
                     </div>
-                    <div class="col-8">
+                    <div class="col-9">
                       <label>Nombre OT</label>
                       <div class="control">
-                        <input class="input" type="text" placeholder="Orden de trabajo N" v-model="nombreOT">
+                        <input class="input" type="text" placeholder="Orden de trabajo N"  formControlName="nombreOT">
                       </div>
                     </div>
                   </div>
@@ -45,12 +47,18 @@
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" src="../assets/img/motocyclist.png"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/png/motocyclist.png"  width="72" class="d-inline-block align-center" alt="">
                     </div>
-                    <div class="col-8">
+                    <div class="col-10">
                     <label>Nombre de Cliente</label>
                       <div class="control">
-                        <input class="input" type="text" placeholder="Juan Pérez" v-model="nombreCliente">
+                        <div class="row">
+                          <div class="col-10">
+                             <select class="form-control" [disabled]="estadoCliente" formControlName="nombreCliente" >
+                                <option *ngFor="let cliente of cliente$" value="{{cliente.id}}">{{cliente.nombre}}</option>
+                              </select>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -58,34 +66,39 @@
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" src="../assets/img/motorcycle.svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/motorcycle.svg"  width="72" class="d-inline-block align-center" alt="">
                     </div>
-                    <div class="col-8">
+                    <div class="col-9">
                     <label>Motocicleta</label>
-                      <select class="form-control" placeholder="Seleccione el modelo de motocicleta" id="exampleFormControlSelect1">
-                        <option>Marca 1 modelo 1A</option>
-                        <option>Marca 1 modelo 1B</option>
-                        <option>Marca 2 modelo 2A</option>
-                        <option>Marca 2 modelo 2B</option>
-                        <option>Marca 2 modelo 2C</option>
-                        <option>Marca 3 modelo 3A</option>
-                      </select>
+                     <div class="row">
+                          <div class="col-3">
+                             <select class="form-control" placeholder="Seleccione el modelo de motocicleta" formControlName="Marca">
+                               <option *ngFor="let marca of marcas$" value="{{marca.id}}">{{marca.nombre}}</option>
+                              </select>
+                          </div>
+                          <div class="col-3">
+                             <select class="form-control" placeholder="Seleccione el modelo de motocicleta"  formControlName="Modelo">
+                                <option *ngFor="let modelo of modelo$" value="{{modelo.id}}">{{modelo.nombre}}</option>
+                              </select>
+                          </div>
+                          <div class="col-3">
+                             <select class="form-control" placeholder="Seleccione el modelo de motocicleta"  formControlName="Anio">
+                                <option *ngFor="let anio of anio$" value="{{anio.id}}">{{anio.nombre}}</option>
+                              </select>
+                          </div>
+                        </div>
                     </div>
                   </div>
                 </div>
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" src="../assets/img/settings(1).svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/settings(1).svg"  width="72" class="d-inline-block align-center" alt="">
                     </div>
                     <div class="col-8">
                        <label>Tipo de trabajo</label>
-                      <select class="form-control" id="exampleFormControlSelect1">
-                        <option>Defensas</option>
-                        <option>Parrillas</option>
-                        <option>Anclaje</option>
-                        <option>Manubrios</option>
-                        <option>Respaldos</option>
+                      <select class="form-control"  formControlName="Tipo">
+                        <option *ngFor="let tipo of tipo$" value="{{tipo.id}}">{{tipo.nombre}}</option>
                       </select>
                     </div>
                   </div>
@@ -93,14 +106,12 @@
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" src="../assets/img/traffic-light.svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/traffic-light.svg"  width="72" class="d-inline-block align-center" alt="">
                     </div>
                     <div class="col-8">
                       <label>Prioridad</label>
-                      <select class="form-control" id="exampleFormControlSelect1">
-                        <option>Prioridad 1</option>
-                        <option>Prioridad 2</option>
-                        <option>Prioridad 3</option>
+                      <select class="form-control"  formControlName="Prioridad">
+                        <option *ngFor="let prioridad of prioridad$" value="{{prioridad.id}}">{{prioridad.nombre}}</option>
                       </select>
                     </div>
                   </div>
@@ -108,12 +119,12 @@
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" src="../assets/img/calendar.svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/calendar.svg"  width="72" class="d-inline-block align-center" alt="">
                     </div>
                     <div class="col-8">
                        <label>Fecha de Entrega</label>
                       <div class="control">
-                        <input class="input" type="date" v-model="phone">
+                        <input class="input" type="date"  formControlName="FechaEntrega">
                       </div>
                     </div>
                   </div>
@@ -122,26 +133,16 @@
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" src="../assets/img/tools.svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/tools.svg"  width="72" class="d-inline-block align-center" alt="">
                     </div>
                     <div class="col-8">
                        <label>Actividades</label>
                       <div class="control">
                         <div class="field">
                           <div style="margin-left:2%">
-                            <input type="checkbox" name="act" value="act01"> Desarmar partes de moto.<br>
-                            <input type="checkbox" name="act" value="act02"> Dimensionar tubos.<br>
-                            <input type="checkbox" name="act" value="act03"> Dimensionar pletinas.<br>
-                            <input type="checkbox" name="act" value="act04"> Perforar y redondear pletinas.<br>
-                            <input type="checkbox" name="act" value="act05"> Curvar tubos.<br>
-                            <input type="checkbox" name="act" value="act06"> Aplastar y perforar placa perilla.<br>
-                            <input type="checkbox" name="act" value="act07"> Soldar estructura.<br>
-                            <input type="checkbox" name="act" value="act08"> Pulir soldadura.<br>
-                            <input type="checkbox" name="act" value="act09"> Probar estructura en la moto.<br>
-                            <input type="checkbox" name="act" value="act10"> Enviar a electropontar.<br>
-                            <input type="checkbox" name="act" value="act11"> Instalar producto en la moto.<br>
-                            <input type="checkbox" name="act" value="act12"> Embalar producto para despacho.<br>
-                            <input type="checkbox" name="act" value="act13"> Limpiar moto y entregar.<br>
+                            <div *ngFor="let act of actividade$">
+                            <input type="checkbox" formControlName="Actividad"  value="{{act.id}}"> {{act.nombre}}<br>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -151,7 +152,7 @@
                 <div class="field">
                   <div class="control">
                     <div class="row">
-                      <div class="col-10">
+                      <div class="col-8">
                       </div>
                       <div class="col">
                         <button type="button" style="align-content: right" class="btn btn-success">Guardar</button>
@@ -160,6 +161,7 @@
                   </div>
                 </div>
               </form>
+                <app-add-cliente *ngIf = "estadoCliente"></app-add-cliente>
            </div>
          </section>
        </div>
