Cambio de iconos y ediciones en panel cliente

--- a/src/app/orden-trabajo/orden-trabajo.component.html
+++ b/src/app/orden-trabajo/orden-trabajo.component.html
@@ -34,7 +34,7 @@
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" color="primary" src="../assets/icons/svg/resume.svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" color="primary" src="../assets/icons/svg/profile_c.svg"  width="72" class="d-inline-block align-center" alt="">
                     </div>
                     <div class="col-9">
                       <label>Nombre OT</label>
@@ -66,7 +66,7 @@
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/motorcycle.svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/motorbike_c.png"  width="72" class="d-inline-block align-center" alt="">
                     </div>
                     <div class="col-9">
                     <label>Motocicleta</label>
@@ -93,7 +93,7 @@
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/settings(1).svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/work_c.svg"  width="72" class="d-inline-block align-center" alt="">
                     </div>
                     <div class="col-8">
                        <label>Tipo de trabajo</label>
@@ -106,7 +106,7 @@
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/traffic-light.svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/traffic-lights_c.svg"  width="72" class="d-inline-block align-center" alt="">
                     </div>
                     <div class="col-8">
                       <label>Prioridad</label>
@@ -119,7 +119,7 @@
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/calendar.svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/calendar_c.png"  width="72" class="d-inline-block align-center" alt="">
                     </div>
                     <div class="col-8">
                        <label>Fecha de Entrega</label>
@@ -133,7 +133,7 @@
                 <div class="field">
                   <div class="row">
                     <div class="col-1-sm">
-                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/tools.svg"  width="72" class="d-inline-block align-center" alt="">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/tools_c.svg"  width="72" class="d-inline-block align-center" alt="">
                     </div>
                     <div class="col-8">
                        <label>Actividades</label>
