--- a/src/app/add-cliente/add-cliente.component.html
+++ b/src/app/add-cliente/add-cliente.component.html
@@ -30,22 +30,100 @@
 						<img style="padding:10px; padding-left: 20px" src="../assets/icons/png/motocyclist.png"  width="72" class="d-inline-block align-center" alt="">
 					</div>
 					<div class="col-9">
-						<label>Nombre Completo</label>
-						<div class="control">
-							<input class="input" type="text" placeholder="Orden de trabajo N"  formControlName="nombreOT">
-						</div>
-					</div>
+						<div class="row">
+					 		<div class="col-12">
+					 			<label>Nombre Completo</label>
+					 			<div class="control">
+					 				<div class="row">
+					 					<div class="col-6">
+					 						<input class="input" type="text" placeholder="Nombre"  formControlName="Nombre">
+					 					</div>
+					 					<div class="col-3">
+					 						<input class="input" type="text" placeholder="Apellido Paterno Apallido Materno"  formControlName="ApellidoPat">
+					 					</div>
+					 					<div class ="col-3">
+					 						<input class="input" type="text" placeholder="Apallido Materno"  formControlName="ApellidoMat">
+					 					</div>
+					 				</div>
+					 				
+	                     		</div>
+	                     	</div>
+	                     	<div class="col-9">
+	                     		<label>RUT</label>
+	                     		<div class="control">
+	                     			<input class="input" type="text" placeholder="XX.XXX.XXX-X"  formControlName="Rut">
+	                     		</div>
+	                     	</div>
+	                    </div>
+	                </div>
 				</div>
+			</div>
+			<div class="field">
 				<div class="row">
 					<div class="col-1-sm">
+						<img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/email_c.svg"  width="72" class="d-inline-block align-center" alt="">
 					</div>
 					<div class="col-9">
-						<label>RUT</label>
+						<label>Correo electrónico</label>
 						<div class="control">
-							<input class="input" type="text" placeholder="Orden de trabajo N"  formControlName="nombreOT">
+							<input class="input" type="text" placeholder="ejemplo@ejemplo.com"  formControlName="correo">
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="field">
+				<div class="row">
+					<div class="col-1-sm">
+						<img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/house_c.svg"  width="72" class="d-inline-block align-center" alt="">
+					</div>
+					<div class="col-9">
+						<label>Dirección</label>
+						 <div class="row">
+	                     	<div class="col-3">
+	                     		<label>Calle</label>
+	                     		<div class="control">
+	                     			<input class="input" type="text" placeholder="Calle/Población/Villa"  formControlName="Dir_calle">
+	                     		</div>
+	                     	</div>
+	                     	<div class="col-3">
+	                     		<label>Número/Depto</label>
+	                     		<div class="control">
+	                     			<input class="input" type="text" placeholder="#"  formControlName="Dir_numero">
+	                     		</div>
+	                     	</div>
+	                     	<div class="col-3">
+	                     		<label>Comuna</label>
+	                     		<div class="control">
+	                     			<input class="input" type="text" placeholder="Comuna"  formControlName="Dir_comuna">
+	                     		</div>
+	                     	</div>
+	                    </div>
+					</div>
+				</div>
+			</div>
+			  <div class="field">
+                  <div class="row">
+                    <div class="col-1-sm">
+                      <img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/phone_c.svg"  width="72" class="d-inline-block align-center" alt="">
+                    </div>
+                    <div class="col-9">
+	                    <label>Teléfono</label>
+	                     <div class="row">
+	                     	<div class="col-6">
+	                     		<label>Teléfono fijo</label>
+	                     		<div class="control">
+	                     			<input class="input" type="text" placeholder="(xx) xxx xxx xxx"  formControlName="Telefono">
+	                     		</div>
+	                     	</div>
+	                     	<div class="col-6">
+	                     		<label>Celular</label>
+	                     		<div class="control">
+	                     			<input class="input" type="text" placeholder="(+569) xxx xxx xxx"  formControlName="Celular">
+	                     		</div>
+	                     	</div>
+	                    </div>
+	                </div>
+                </div>
 			</div>
 	    </form>
 	</div>
