Correcciones de interfaz e intentos de backend

--- a/src/app/add-cliente/add-cliente.component.html
+++ b/src/app/add-cliente/add-cliente.component.html
@@ -27,7 +27,7 @@
 			<div class="field">
 				<div class="row">
 					<div class="col-1-sm">
-						<img style="padding:10px; padding-left: 20px" src="../assets/icons/png/motocyclist.png"  width="72" class="d-inline-block align-center" alt="">
+						<img style="padding:10px; padding-left: 20px" src="../assets/icons/svg/motorcyclist_c.svg"  width="72" class="d-inline-block align-center" alt="">
 					</div>
 					<div class="col-9">
 						<div class="row">
