--- a/src/app/orden-trabajo/orden-trabajo.component.scss
+++ b/src/app/orden-trabajo/orden-trabajo.component.scss
@@ -12,10 +12,7 @@ label{
 }
 
 .box{
-	border: 2px solid #FF0022 !important;
-	color: #4C4C4E;
+	border: 1px solid #FF0022 !important;
+	background-color: #f8f9f9;	
 }
 
-div{
-	color: #4C4C4E;
-}
