--- a/src/app/ficha-ind/ficha-ind.component.html
+++ b/src/app/ficha-ind/ficha-ind.component.html
@@ -19,129 +19,140 @@
 </head>
 <body>
   <app-nav></app-nav>
-  <div class="container">
-    <section class="section section-container" style="padding-bottom: 10px;">
-      <div class="box">
-        <div class="row">
-          <div class="col-8">
-            <h1>Ficha de orden de trabajo</h1>
-          </div>
-          <div class="col-3">
-            <br>
-            <button type="button" class="btn btn-info" (click)="generateReport()">Generar Reporte</button>
-          </div>
-        </div>
-          <div class="field">
-              <label>Nombre OT: KTM 1290</label>
-          </div>
-          <div class="field">
-              <label>Nombre de Cliente: Hernán Rodriguez</label>
-          </div>
-          <div class="field">
-              <label>Motocicleta: KTM 1290</label>
-          </div>
-          <div class="field">
-              <label>Tipo de trabajo: Parrilla</label>
-          </div>
-          <div class="field">
-              <label>Prioridad: 3ra</label>
-          </div>
-          <div class="field">
-              <label>Fecha de Inicio: 12-07-2019</label>
-          </div>
-          <div class="field">
-              <label>Fecha de Entrega: 30-08-2019</label>
-          </div>
+  <div id="content-wrapper" class="d-flex flex-column" style="background-image: url('./assets/img/background4.jpg'); background-position: center; background-size: cover;">
+    <div id="content">
+      <div class="container-fluid" style="width: 1000px; ">
+        <section class="section section-container" style="padding-bottom: 10px;">
           <div class="box">
-            <div class="field">
-              <table class="table table-hover">
-                <thead class="table-info">
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Actividad</th>
-                    <th scope="col">Fecha de completado</th>
-                    <th scope="col">Estado</th>
-
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Desarmar partes de moto.</td>
-                    <td>20-07-2019</td>
-                    <td>Listo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Dimensionar tubos.</td>
-                    <td>20-07-2019</td>
-                    <td>Listo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Dimensionar pletinas.</td>
-                    <td>20-07-2019</td>
-                    <td>Listo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">4</th>
-                    <td>Perforar y redondear pletinas.</td>
-                    <td>20-07-2019</td>
-                    <td>Listo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">5</th>
-                    <td>Curvar tubos.</td>
-                    <td>20-07-2019</td>
-                    <td>Listo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">6</th>
-                    <td>Aplastar y perforar placa perilla.</td>
-                    <td>20-07-2019</td>
-                    <td>Listo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">7</th>
-                    <td>Soldar estructura.</td>
-                    <td>20-07-2019</td>
-                    <td>Listo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">8</th>
-                    <td>Pulir soldadura.</td>
-                    <td>20-07-2019</td>
-                    <td>Listo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">9</th>
-                    <td>Probar estructura en la moto.</td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <th scope="row">10</th>
-                    <td>Enviar a electropontar.</td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <th scope="row">11</th>
-                    <td>Instalar producto en la moto.</td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <th scope="row">12</th>
-                    <td>Limpiar moto y entregar.</td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                </tbody>
-              </table>
+            <div class="row">
+              <div class="col-8">
+                <h1>Ficha de orden de trabajo</h1>
+              </div>
             </div>
-          </div>
+            <div class="row">
+              <div class="col-8">
+                <div class="field">
+                  <label>Nombre OT: KTM 1290</label>
+                </div>
+                <div class="field">
+                  <label>Nombre de Cliente: Hernán Rodriguez</label>
+                </div>
+                <div class="field">
+                  <label>Motocicleta: KTM 1290</label>
+                </div>
+                <div class="field">
+                  <label>Tipo de trabajo: Parrilla</label>
+                </div>
+                <div class="field">
+                  <label>Prioridad: 3ra</label>
+                </div>
+                <div class="field">
+                  <label>Fecha de Inicio: 12-07-2019</label>
+                </div>
+                <div class="field">
+                  <label>Fecha de Entrega: 30-08-2019</label>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="field">
+                  <button type="button" class="btn btn-info" (click)="generateReport()" style="width: 140px;">Descargar <br> Ficha</button>
+                </div>
+                <div class="field">
+                  <button type="button" class="btn btn-info" (click)="generateReport()" style="width: 140px;">Descargar <br> Hoja para Envío</button>
+                </div>
+              </div>
+            </div>
+            <div class="box">
+              <div class="field">
+                <table class="table table-hover">
+                  <thead class="table-info">
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Actividad</th>
+                      <th scope="col">Fecha de completado</th>
+                      <th scope="col">Estado</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>Desarmar partes de moto.</td>
+                      <td>20-07-2019</td>
+                      <td>Listo</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">2</th>
+                      <td>Dimensionar tubos.</td>
+                      <td>20-07-2019</td>
+                      <td>Listo</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">3</th>
+                      <td>Dimensionar pletinas.</td>
+                      <td>20-07-2019</td>
+                      <td>Listo</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">4</th>
+                      <td>Perforar y redondear pletinas.</td>
+                      <td>20-07-2019</td>
+                      <td>Listo</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">5</th>
+                      <td>Curvar tubos.</td>
+                      <td>20-07-2019</td>
+                      <td>Listo</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">6</th>
+                      <td>Aplastar y perforar placa perilla.</td>
+                      <td>20-07-2019</td>
+                      <td>Listo</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">7</th>
+                      <td>Soldar estructura.</td>
+                      <td>20-07-2019</td>
+                      <td>Listo</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">8</th>
+                      <td>Pulir soldadura.</td>
+                      <td>20-07-2019</td>
+                      <td>Listo</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">9</th>
+                        <td>Probar estructura en la moto.</td>
+                        <td></td>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">10</th>
+                        <td>Enviar a electropontar.</td>
+                        <td></td>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">11</th>
+                        <td>Instalar producto en la moto.</td>
+                        <td></td>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">12</th>
+                        <td>Limpiar moto y entregar.</td>
+                        <td></td>
+                        <td></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
-      </section>
+      </div>
     </div>
   </body>
